biography by flex-box

--- a/awards_page.html
+++ b/awards_page.html
@@ -9,7 +9,8 @@
         <div id="head">
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
-
+        
+        <div class="flex"></div>
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/awards.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>On October 25, 2019, Jackie Chan was honored with the Albert R. Broccoli Award for Worldwide Contribution to Entertainment at the British Academy 
@@ -36,6 +37,7 @@
                 <li><a href="nominations_page.html">Nominations</a> </li>
                 <li class="chosen">Awards</li>
             </ul>
+        </div>
         </div>
 
         <div id="footer">
