--- a/personal-life_page.html
+++ b/personal-life_page.html
@@ -9,7 +9,8 @@
         <div id="head">
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
-
+        
+        <div class="flex"></div>
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/personal_life.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>In 1982, Chan married Joan Lin, a Taiwanese actress. Their son, singer and actor Jaycee Chan, was born that same year.[56] After he engaged 
@@ -39,6 +40,7 @@
                 <li><a href="nominations_page.html">Nominations</a> </li>
                 <li><a href="awards_page.html">Awards</a> </li>
             </ul>
+        </div>
         </div>
 
         <div id="footer">
