--- a/Biography2.html
+++ b/Biography2.html
@@ -9,7 +9,8 @@
         <div id="head">
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
-
+        
+        <div class="flex">
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/photo.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>Chan Kong-sang, born 7 April 1954, known professionally as Jackie Chan, is a Hong Kong martial artist, 
@@ -44,6 +45,7 @@
                 <li><a href="nominations_page.html">Nominations</a> </li>
                 <li><a href="awards_page.html">Awards</a> </li>
             </ul>
+        </div>
         </div>
 
         <div id="footer">
