--- a/early-life_page.html
+++ b/early-life_page.html
@@ -9,7 +9,8 @@
         <div id="head">
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
-
+        
+        <div class="flex"></div>
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/early_life.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>Chan was born on 7 April 1954 in Hong Kong as Chan Kong-sang to Charles and Lee-Lee Chan, refugees from the Chinese Civil War. 
@@ -42,6 +43,7 @@
                 <li><a href="nominations_page.html">Nominations</a> </li>
                 <li><a href="awards_page.html">Awards</a> </li>
             </ul>
+        </div>
         </div>
 
         <div id="footer">
