--- a/film-career_page.html
+++ b/film-career_page.html
@@ -9,7 +9,8 @@
         <div id="head">
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
-
+        
+        <div class="flex"></div>
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/film_career.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>He began his career by appearing in small roles at the age of five as a child actor. At age eight, he appeared with some of his fellow "
@@ -40,6 +41,7 @@
                 <li><a href="nominations_page.html">Nominations</a> </li>
                 <li><a href="awards_page.html">Awards</a> </li>
             </ul>
+        </div>
         </div>
 
         <div id="footer">
