--- a/filmography_page.html
+++ b/filmography_page.html
@@ -9,7 +9,8 @@
         <div id="head">
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
-
+        
+        <div class="flex"></div>
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/filmography.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>Chan began his career as an extra child actor in the 1962 film Big and Little Wong Tin Bar. Ten years later, he was a stuntman opposite Bruce Lee in 1972's 
@@ -42,6 +43,7 @@
                 <li><a href="nominations_page.html">Nominations</a> </li>
                 <li><a href="awards_page.html">Awards</a> </li>
             </ul>
+        </div>
         </div>
 
         <div id="footer">
