--- a/stunts_page.html
+++ b/stunts_page.html
@@ -9,7 +9,8 @@
         <div id="head">
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
-
+        
+        <div class="flex"></div>
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/stunts.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>Chan has performed most of his own stunts throughout his film career, which are choreographed by the Jackie Chan Stunt Team. He has stated 
@@ -38,6 +39,7 @@
                 <li><a href="nominations_page.html">Nominations</a> </li>
                 <li><a href="awards_page.html">Awards</a> </li>
             </ul>
+        </div>
         </div>
 
         <div id="footer">
