--- a/awards_page.html
+++ b/awards_page.html
@@ -10,7 +10,7 @@
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
         
-        <div class="flex"></div>
+        <div class="flex"> 
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/awards.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>On October 25, 2019, Jackie Chan was honored with the Albert R. Broccoli Award for Worldwide Contribution to Entertainment at the British Academy 
