--- a/film-career_page.html
+++ b/film-career_page.html
@@ -10,7 +10,7 @@
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
         
-        <div class="flex"></div>
+        <div class="flex"> 
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/film_career.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>He began his career by appearing in small roles at the age of five as a child actor. At age eight, he appeared with some of his fellow "
