--- a/nominations_page.html
+++ b/nominations_page.html
@@ -10,7 +10,7 @@
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
         
-        <div class="flex"></div>
+        <div class="flex"> 
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/nominations.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>Jackie Chan Action Movie Awards are awards presented to action film genre. The "Jackie Chan Action Movie Week" was originally presented during the 
