--- a/early-life_page.html
+++ b/early-life_page.html
@@ -10,7 +10,7 @@
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
         
-        <div class="flex"></div>
+        <div class="flex">  
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/early_life.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>Chan was born on 7 April 1954 in Hong Kong as Chan Kong-sang to Charles and Lee-Lee Chan, refugees from the Chinese Civil War. 
