--- a/stunts_page.html
+++ b/stunts_page.html
@@ -10,7 +10,7 @@
             <h1><a href="Biography2.html">Jackie Chan</a> </h1>
         </div>
         
-        <div class="flex"></div>
+        <div class="flex"> 
         <div id="content">
             <p><a href="https://en.wikipedia.org/wiki/Jackie_Chan"><img src="images/stunts.jpg" alt="Jackie Chan photo" title="Jackie Chan"></a></p>
             <p>Chan has performed most of his own stunts throughout his film career, which are choreographed by the Jackie Chan Stunt Team. He has stated 
